--- a/DistanceMonitoring.Web/WebRoot/index.html
+++ b/DistanceMonitoring.Web/WebRoot/index.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
-<html>
+<html lang="ru">
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Page Title</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <title>Distance Monitoring</title>
 </head>
 <body>
-    <h1>СОСАТЬ</h1>
+    <div id="app"></div>
+    <script src="dist/output.js"></script>
 </body>
 </html>
