--- a/DistanceMonitoring.Web/WebRoot/index.html
+++ b/DistanceMonitoring.Web/WebRoot/index.html
@@ -2,7 +2,7 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="./node_modules/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../node_modules/bootstrap/dist/css/bootstrap.min.css" />
     <title>Distance Monitoring</title>
 </head>
 <body>
